--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@
 
 .blog-header {
   line-height: 1;
-  border-bottom: 1px solid #e5e5e5;
+  border-bottom: 1px solid blue;
 }
 
 .blog-header-logo {
@@ -16,6 +16,7 @@
 
 h1, h2, h3, h4, h5, h6 {
   font-family: "Playfair Display", Georgia, "Times New Roman", serif;
+  color:skyblue;
 }
 
 .display-4 {
